# UnifiedVol

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DATA.md  LICENSE.txt  README.md  UnifiedVol.sln  branch-protection-test.txt  build.sh  build.sh.save  callgrind.out.65419  callgrind.out.75285  callgrind.out.76073  callgrind.out.76074  callgrind.out.76082  callgrind.out.76087  callgrind.out.76125  citations.bib  codecov.yml  sanity.md  sonar-project.properties  vcpkg.json
.githooks/: pre-commit
.github/: workflows
.github/actions/setup-cpp/: action.yml
.github/workflows/: ci.yml  clang-tidy.yml  codeql.yml  cpp-ci.yml  performance.yml  quality.yml
UnifiedVol/: UnifiedVol.vcxproj  UnifiedVol.vcxproj.filters
UnifiedVol/data/: Analysis_SPY.xlsx  SVI_VolSurface_SPY_04072011.csv  VolSurface_SPY_04072011.csv
UnifiedVol/data/inputs/: VolSurface_SPY_04072011.csv
UnifiedVol/include/Core/: SliceData.hpp  VolSurface.hpp
UnifiedVol/include/DataStructs/: RawSVIParams.hpp  SliceData.hpp  VolSurface.hpp
UnifiedVol/include/Utils/: CSVRead.hpp  CSVWrite.hpp  Log.hpp
UnifiedVol/include/VolModels/: SVI.hpp
UnifiedVol/src/: main.cpp
UnifiedVol/src/Core/: SliceData.cpp  VolSurface.cpp
UnifiedVol/src/DataStructs/: VolSurface.cpp
UnifiedVol/src/Models/: SVI.cpp
UnifiedVol/src/Utils/: CSVRead.cpp  CSVWrite.cpp
UnifiedVol/src/VolModels/: SVI.cpp
data/: VolSurface_SPY_04072025.csv
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  DATA.md  DEPENDENCIES.md  NUMERICAL_REFERENCES.md  TREE.md  citations.bib  references.md
docs/Plots/: vol_plots.ipynb
examples/: main.cpp
include/Calibration/: Utils.hpp  Utils.inl
include/Calibration/Ceres/: Calibrator.hpp  Calibrator.inl  Config.hpp  Policy.hpp
include/Calibration/NLopt/: Calibrator.hpp  Calibrator.inl  Config.hpp
include/Core/: Functions.hpp  Functions.inl  MarketData.hpp  Matrix.hpp  Matrix.inl  SliceData.hpp  Types.hpp  VolSurface.hpp  VolSurface.inl
include/Core/Matrix/: Functions.hpp  Functions.inl  Matrix.hpp  Matrix.inl
include/Errors/: Errors.hpp
include/Math/: Functions.hpp  Functions.inl  Interpolation.hpp  Interpolation.inl
include/Math/Calibration/: Calibrator.hpp  Calibrator.inl  CalibratorConfig.hpp  CalibratorReport.hpp  Config.hpp
include/Math/Integration/: Functions.hpp  Functions.inl  TanHSinH.hpp  TanHSinH.inl
include/Math/Interpolation/: Interpolation.hpp  Interpolation.inl  Interpolator.hpp  Interpolator.inl  Policies.hpp  Policies.inl
include/Math/MathFunctions/: MathFunctions.hpp  MathFunctions.inl
include/Math/Optimization/: Functions.hpp  Functions.inl
include/Math/PDE/: AHCache.hpp  Functions.hpp  Functions.inl  PDE.hpp  TriDiag.hpp
include/Math/Quadrature/: GaussLaguerre.hpp  GaussLaguerre.inl  TanHSinH.hpp  TanHSinH.inl
include/Quadrature/: StandardGL.hpp  StandardGL.inl
include/Utils/: ConsoleRedirect.hpp  Log.hpp  PCH.hpp  Types.hpp
include/uv/: UnifiedVol.hpp
install/lib/: UnifiedVol.lib
python/: Bindings.cpp
python/tests/: chang_cooper.ipynb  pchip.ipynb
src/Base/: Config.cpp
src/Core/: Functions.cpp  SliceData.cpp  VolSurface.cpp
src/Errors/: Errors.cpp
src/Math/: Functions.cpp
src/Models/: SVI.cpp
src/Optimization/: Helpers.cpp
src/Quadrature/: StandardGL.cpp
src/Utils/: Log.cpp  StopWatch.cpp
tests/: CMakeLists.txt
tests/Golden/: black_known_value.json  bspline_known_values.json  example_pipeline.json  performance_budgets.json  synthetic_svi_calibration.json
tests/Heston/: IntrinsicValue.cpp  SigmaZeroMatchesBlack.cpp
tests/Integration/: BlackSurfacePricing.cpp  LoadAndReport.cpp  MarketStateGeneration.cpp  OptimizerToyProblems.cpp
tests/Integration/Math/Integration/: TanHSinH.cpp
tests/Integration/Models/Heston/: ParameterBoundaries.cpp  PricingInvariants.cpp  Stress.cpp  SurfacePricing.cpp
tests/Integration/Models/SVI/: CalibrationValidation.cpp  SurfaceBuild.cpp  SurfaceInvariants.cpp
tests/Performance/: BSplinePerformance.cpp  BudgetFixtures.cpp  Budgets.hpp  ExamplePipelinePerformance.cpp  HestonPerformance.cpp  SVIPerformance.cpp  Timing.hpp
tests/Performance/Math/Interpolation/: BSplinePerformance.cpp
tests/Performance/Math/LinearAlgebra/: TridiagonalPerformance.cpp
tests/Performance/Models/: HestonPerformance.cpp  SVIPerformance.cpp
tests/Performance/Pipelines/: ExamplePipelinePerformance.cpp
tests/Regression/: BSplineKnownValues.cpp  BlackKnownValues.cpp  ExamplePipeline.cpp  Golden.hpp  GoldenFixtures.cpp
tests/Regression/Models/Heston/: GradientFiniteDifference.cpp  IntrinsicValue.cpp  SigmaZeroMatchesBlack.cpp
tests/Regression/Models/SVI/: StressCalibration.cpp  SyntheticCalibration.cpp
tests/Support/: Assertions.hpp  Diagnostics.hpp  Golden.cpp  Golden.hpp  Json.hpp  TempFile.hpp  Tolerances.hpp
tests/Support/Math/LinearAlgebra/: Tridiagonal.hpp
tests/Support/Models/: SVI.hpp
tests/Support/Performance/: Budgets.hpp  Timing.hpp
tests/Unit/Base/: Types.cpp
tests/Unit/Base/Errors/: Errors.cpp  Validate.cpp
tests/Unit/Base/Execution/: ThreadPolicy.cpp
tests/Unit/Core/: Curve.cpp  Matrix.cpp  VolSurface.cpp
tests/Unit/IO/CSV/: Read.cpp
tests/Unit/IO/JSON/: Read.cpp
tests/Unit/Math/Functions/: Black.cpp  Primitive.cpp  Volatility.cpp
tests/Unit/Math/Integration/: TanHSinH.cpp
tests/Unit/Math/Interpolation/BSpline/: Interpolator.cpp
tests/Unit/Math/Interpolation/Hermite/: Interpolator.cpp
tests/Unit/Math/LinearAlgebra/: MatrixOps.cpp  Tridiagonal.cpp  VectorOps.cpp
tests/Unit/Math/PDE/: Grid.cpp
tests/Unit/Models/Heston/: Params.cpp
tests/Unit/Models/SVI/: Math.cpp  Params.cpp
tests/Unit/Optimization/: CeresAdapter.cpp  Cost.cpp  Helpers.cpp  NLoptStatus.cpp
tests/Unit/Support/: GoldenFixtures.cpp  PerformanceBudgetFixtures.cpp  Timing.cpp
tools/: gen_tree.sh
uv/: UnifiedVol.hpp
uv/Base/: Config.hpp  Types.hpp
uv/Core/: Curve.hpp  Generate.hpp  MarketData.hpp  MarketState.hpp  Matrix.hpp  VolSurface.hpp
uv/IO/: ConsoleRedirect.hpp  Load.hpp  Report.hpp
uv/Optimization/: Cost.hpp  Helpers.hpp
(+369 files in other folders)
